# Ntype-JP

./: .envrc  .gitignore  License.txt  flake.nix  investigate_error.py  pyproject.toml  rounder.py  serve_preview.py  subset.txt
preview/: index.html  script.js  style.css
src/: __init__.py  cli.py  effects.py  metadata.py  processor.py  setup_assets.py  vector_test.py
